[package]
name = "propane"
version = "0.1.0"
authors = ["Without Boats <saoirse@without.boats>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "a generator syntax experiment"
repository = "https://github.com/withoutboats/propane"
documentation = "https://docs.rs/propane"
keywords = ["iterators", "generators"]

[dependencies]
futures-core = "0.3.5"

[dependencies.propane-macros]
path = "./propane-macros"
version = "0.1.0"

[dependencies.fehler-crate]
version = "1.0.0"
optional = true
package = "fehler"

[features]
fehler = ["fehler-crate", "propane-macros/fehler"]

[workspace]
